.manifests/kubernetes/prod/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
  labels:
    app: team-splitter-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-splitter-bot
  template:
    metadata:
      labels:
        app: team-splitter-bot
    spec:
      containers:
        - name: team-splitter-bot
          image: mukhanovmax/team-splitter-bot:1.17
