.manifests/kubernetes/prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-splitter-backend-deployment
  labels:
    app: team-splitter-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team-splitter-backend
  template:
    metadata:
      labels:
        app: team-splitter-backend
    spec:
      containers:
        - name: team-splitter-backend
          image: ghcr.io/team-splitter/team-splitter-server:1.58
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
#  type: NodePort
  selector:
    app: team-splitter-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30100
