.manifests/kubernetes/prod/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/maxmukhanov/team-splitter-ui:1.18
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
#  type: NodePort
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
#      nodePort: 30200
