.manifests/kubernetes/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: team-splitter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teamsplitter.com
      http:
        paths:
          - path: /
            backend:
              service:
                serviceName: frontend-service
                servicePort: 9000
